kubernetes/config-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-service
  labels:
    app: config-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-service
  template:
    metadata:
      labels:
        app: config-service
    spec:
      containers:
      - name: config-service
        image: rajeshg87/config-service:1.0
        ports:
        - containerPort: 8088
        
---
apiVersion: v1
kind: Service
metadata:
  name: config-service
  labels:
    app: config-service
spec:
  ports:
  - port: 8088
    protocol: TCP
    nodePort: 31002
  selector:
    app: config-service
  type: NodePort
