kubernetes/user-ui-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2 
kind: Deployment 
metadata: 
  name: user-ui-deployment
spec: 
  selector: 
    matchLabels:
      app: user-ui
  replicas: 1 # tells deployment to run 1 pods matching the template 
  template: 
    metadata: 
      labels: 
        app: user-ui 
    spec: 
      containers: 
      - name: angular 
        image: rajeshg87/user-ui-app:2.0
        ports: 
        - containerPort: 80 
---
# https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service  
kind: Service 
apiVersion: v1 
metadata: 
  name: user-ui-service 
spec: 
  selector: 
    app: user-ui 
  ports: 
  - protocol: TCP 
    port: 80 
    targetPort: 80 
    nodePort: 31000 
  type: NodePort
